--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/swagger": "^6.3.0",
     "@nestjs/typeorm": "^9.0.1",
+    "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
     "chalk": "^4.1.2",
     "class-transformer": "^0.5.1",
@@ -34,6 +35,7 @@
     "husky": "^8.0.2",
     "json2csv": "^5.0.7",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.2",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
@@ -41,6 +43,7 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
+    "sib-api-v3-sdk": "^8.5.0",
     "swagger-ui-express": "^4.6.3",
     "typeorm": "^0.3.10"
   },
